Created page with "The main Gentoo specific directories mentioned in Gentoo Handbook. {| class="wikitable" ! Directory !! Description |- | / || by default Portage installs all files on the current ..."

--- a/Directories.mw
+++ b/Directories.mw
@@ -1,70 +1,75 @@
-This article [[Article description::contains a non-exhaustive list of some directories typically found on Gentoo installations that are outside the Linux [[wikipedia:Filesystem_Hierarchy_Standard|Filesystem Hierarchy Standard]].]] A few of these special directories are mentioned in the [[Handbook:Main Page|handbook]].
-
-== Gentoo specific directories ==
-
-{| class="table table-striped table-condensed"
+The main Gentoo specific directories mentioned in Gentoo Handbook.
+{| class="wikitable"
 ! Directory !! Description
 |-
-| {{Path|/}} || By default Portage installs all files on the current filesystem to {{Path|/}}.
+| / || by default Portage installs all files on the current filesystem
 |-
-| {{Path|[[:/etc/conf.d]]}} || Every init script that can be configured has a file in this directory.
+| /etc/conf.d || every init script that can be configured has a file in there
 |-
-| {{Path|/etc/env.d}} || Files which contain the variables.
+| /etc/env.d || files which contain the variables
 |-
-| {{Path|/etc/init.d}} || Init scripts directory. Most services that can be controlled should install a script here.
+| /etc/init.d || Init Scripts
 |-
-| {{Path|[[:/etc/portage|/etc/portage]]}} || The Portage configuration directory.
+| /etc/runlevels/boot || boot runlevel
 |-
-| {{Path|/etc/runlevels/boot}} || The {{Path|boot}} runlevel.
+| /etc/runlevels/default || default runlevel
 |-
-| {{Path|/etc/runlevels/default}} || The {{Path|default}} runlevel.
+| /etc/runlevels/nonetwork || nonetwork runlevel
 |-
-| {{Path|/etc/runlevels/nonetwork}} || The {{Path|nonetwork}} runlevel.
+| /etc/runlevels/reboot || reboot runlevel
 |-
-| {{Path|/etc/runlevels/reboot}} || The {{Path|reboot}} runlevel.
+| /etc/runlevels/shutdown || shutdown runlevel
 |-
-| {{Path|/etc/runlevels/shutdown}} || The {{Path|shutdown}} runlevel
+| /etc/runlevels/single || single runlevel
 |-
-| {{Path|/etc/runlevels/single}} || The {{Path|single}} runlevel
+| /etc/runlevels/sysinit || sysinit runlevel
 |-
-| {{Path|/etc/runlevels/sysinit}} || The {{Path|sysinit}} runlevel.
+| /opt/ebuilds || overlay tree
 |-
-| {{Path|/opt/ebuilds}} || Overlay tree.
+| /usr/lib/ccache/bin || ccache
 |-
-| {{Path|/usr/lib/ccache/bin}} || The ccache binary directory.
+| /usr/local/portage || Portage Overlay Directory
 |-
-| {{Path|/usr/local/portage}} || Overlay default directory.
+| /usr/portage || ebuilds reside in there by default
 |-
-| {{Path|/usr/share/doc/<package>}} || Documentation is generally found at this location.
+| /usr/portage || Portage tree default location
 |-
-| {{Path|/usr/src/linux}} || Linux sources directory.
+| /usr/portage/distfiles || stores the necessary source code by default
 |-
-| {{Path|[[:/var/cache/binpkgs]]}} || Prebuilt binary packages. 
+| /usr/portage/distfiles || the source files are downloaded and preserved in there
 |-
-| {{Path|[[:/var/cache/distfiles]]}} || Downloaded source code archives.
+| /usr/portage/licenses || licenses are stored in there
 |-
-| {{Path|/var/cache/edb}} || Portage cache.
+| /usr/portage/packages || prebuilt packages
 |-
-| {{Path|/var/db/pkg}} || Portage stores the state of the system.
+| /usr/portage/profiles || holds the profile files
 |-
-| {{Path|[[:/var/db/repos/gentoo]]}} || Gentoo repositories' default location.
+| /usr/portage/profiles/license_groups || license groups are kept in there
 |-
-| {{Path|[[:/var/lib/portage]]}} || The versions for the applications have been explicitly installed.
+| /usr/share/doc/<package> || documentation is generally found in there
 |-
-| {{Path|/var/log/portage/elog}} || One log per package.
+| /usr/src/linux || 
 |-
-| {{Path|/var/tmp}} || Portage temporary file directory.
+| /var/cache/edb || Portage cache
 |-
-| {{Path|/var/tmp/ccache}} || Portage default ccache home directory.
+| /var/db/pkg || Portage stores the state of your system
 |-
-| {{Path|/var/tmp/portage}} || Portage specific build directories for each package it emerges.
+| /var/lib/portage || the versions for the applications you have explicitly installed
 |-
-| {{c|emerge --info <nowiki>|</nowiki> grep CONFIG_PROTECT{{=}}}} || Directories which should be protected by Portage during updates, see <var>[[CONFIG_PROTECT]]</var> article for more information.
+| /var/log/portage/elog || one log per package in there
 |-
-| {{c|emerge --info <nowiki>|</nowiki> grep CONFIG_PROTECT_MASK{{=}}}} || Directories which should not be protected by Portage during updates, see <var>[[CONFIG_PROTECT]]</var> article for more information.
+| /var/tmp || Portage temporary files
+|-
+| /var/tmp/ccache || Portage default ccache home directory
+|-
+| /var/tmp/portage || Portage specific build directories for each package it emerges inside there
+|-
+| `emerge --info <nowiki>|</nowiki> grep 'CONFIG_PROTECT='` || a protected location
+|-
+| `emerge --info <nowiki>|</nowiki> grep 'CONFIG_PROTECT='` || directories which should be protected by Portage during updates
+|-
+| `emerge --info <nowiki>|</nowiki> grep 'CONFIG_PROTECT_MASK='` || an unprotected location
+|-
+| `emerge --info <nowiki>|</nowiki> grep 'CONFIG_PROTECT_MASK='` || directories which should not be protected by Portage during updates
+|-
 |}
-
-== External resources ==
-
-* https://devmanual.gentoo.org/general-concepts/filesystem/index.html - General concepts from the Dev Handbook for Gentoo developers on filesystem hierarchy.
-* https://en.wikipedia.org/wiki/Filesystem_Hierarchy_Standard - Wikipedia's article on the Linux Filesystem Hierarchy Standard (FHS).
