Created page with "wxFormBuilder is an application that can literally speed up GUI development, being ''Python'' either ''C++'' the programming language of your choice.  To install it, you need to ..."

--- a/WxFormBuilder.mw
+++ b/WxFormBuilder.mw
@@ -1,24 +1,10 @@
-'''wxFormBuilder''' is [[Article description::an application that can literally speed up GUI development, being Python either C++ the programming language of choice.]]
+wxFormBuilder is an application that can literally speed up GUI development, being ''Python'' either ''C++'' the programming language of your choice.
 
-== Installation ==
+To install it, you need to first add the '''gentoo-zh''' overlay:
+{{Cmd|layman -a gentoo-zh}}
 
-To install it, first add the ''gentoo-zh'' [[ebuild repository]]:
+Then, since '''premake 3.7''' is currently an ebuild prerequisite, though the core system is already providing '''premake 4''', you have to directly specify it:
+{{Cmd|emerge ≈dev-util/premake-3.7}}
 
-{{RootCmd|eselect repository enable gentoo-zh|emerge --sync gentoo-zh}}
-or
-{{RootCmd|layman -a gentoo-zh}}
-
-Then, since premake-3.7 is currently an ebuild prerequisite, though the core system is already providing premake-4, you have to directly specify it:
-
-{{Emerge|dev-util/premake:3}}
-
-You may now proceed and install {{Package|dev-util/wxFormBuilder}} itself:
-
-{{Emerge|wxformbuilder}}
-
-== External resources ==
-
-* http://wxformbuilder.org
-
-[[Category:Development]]
-[[Category:Software]]
+You may now proceed and install wxFormBuilder itself:
+{{Cmd|emerge dev-util/wxformbuilder}}
