--- a/PhpVirtualBox.mw
+++ b/PhpVirtualBox.mw
@@ -1,59 +1,34 @@
-{{Lowercase title}}
-{{InfoBox stack
-|{{InfoBox homepage|https://sourceforge.net/projects/phpvirtualbox/|header=true}}
-|{{InfoBox github|phpvirtualbox/phpvirtualbox}}
-}}
-
-'''phpVirtualBox''' is [[Article description::a web-based administration utility for [[VirtualBox]].]]
+PHPVirtualbox is a web-based administration utility for Virtualbox
 
 == Installation ==
-
-Currently, {{Package|app-emulation/phpvirtualbox}} has no stable version, so you need to add it to your package.accept_keywords file.
+Currently, app-emulation/phpvirtualbox has no stable version, so you need to add it to your package.accept_keywords file.
 
 {{Emerge|app-emulation/phpvirtualbox}}
 
 == Configuration ==
+PHPVirtualbox does not need a virtualbox installation to be present on the same box where PHPVirtualbox is installed. PHPVirtuabox can connect to other machines where your virtual machines are installed.
+PHPVirtualbox requires a web-server to be present on your box, so we will demonstrate an Apache configuration using SSL certificate to encrypt your communication with the server.
 
-phpVirtualBox does not need a VirtualBox installation to be present on the same box where phpVirtualBox is installed. phpVirtualBox can connect to other machines where your virtual machines are installed.
-phpVirtualBox requires a web-server to be present on your box, so we will demonstrate an Apache configuration using SSL certificate to encrypt your communication with the server.
-
-=== Verify VirtualBox installation ===
-
-VirtualBox '''must''' be compiled with the <code>vboxwebsrv</code> USE flag on the host where the virtual machines are located.
-
-{{FileBox|filename=/etc/portage/package.use|1=
-app-emulation/virtualbox vboxwebsrv
+=== Verify VirtualBox Installation ===
+Virtualbox '''must''' be compiled with the vboxwebsrv use flag on the host where your virtual machines are located.
+{{USEflag
+|package=app-emulation/virtualbox
+|vboxwebsrv ++yes
 }}
-
-=== Create SSL certificate ===
-
+=== Create SSL Certificate ===
 First, we create our shiny new SSL certificate
-
 * Create our '''secret''' private key
-
-{{RootCmd|openssl genrsa -des3 -out virtualbox-server.key 4096}}
-
-* You probably want to remove your private key, otherwise apache will ask you for it every time you start it 
-
-{{RootCmd|openssl rsa -in virtualbox-server.key -out virtualbox-server.key}}
-
+openssl genrsa -des3 -out virtualbox-server.key 4096
 * Create our new Certificate Singing Request (CSR)
-
-{{RootCmd|openssl req -new -key virtualbox-server.key -out virtualbox-key.csr}}
-
+openssl req -new -key virtualbox-server.key -out virtualbox-key.csr
 * Sign the CSR using our private key
-
-{{RootCmd|openssl x509 -req -days 365 -in virtualbox-key.csr -signkey virtualbox-server.key -out virtualbox-server.crt}}
-
+openssl x509 -req -days 365 -in virtualbox-server.csr -signkey virtualbox-server.key -out virtualbox-server.crt
 * Place certificate and private key somewhere safe
-
 {{RootCmd|cp virtualbox-server.{key,crt} /etc/apache2/ssl-data/.}}
 
-=== Configure Apache virtual host ===
-
-Assuming you already have a working Apache installation, you need to create a new virtualhost for your phpVirtualBox installation. This entry should look like this:
-
-{{FileBox|filename=/etc/apache2/vhost.d/99-virtualbox.conf|title=phpVirtualBox vhost configuation|lang=apache|1=
+=== Configure Apache Virtual Host ===
+Assuming you already have a working Apache installation, you need to create a new virtualhost for your phpvirtualbox installation. This entry should look like this:
+{{File|/etc/apache2/vhost.d/99-virtualbox.conf|PHPVirtualBox vhost configuation|<pre>
 <VirtualHost *:443>
         ServerName phpvirtualbox.mydomain.example # Change this to your domain name
         DocumentRoot /usr/share/webapps/phpvirtualbox/4.1.7/htdocs/
@@ -72,53 +47,39 @@ Assuming you already have a working Apache installation, you need to create a ne
         </Location>
         ErrorLog /var/log/apache2/virtualbox_error.log
 </VirtualHost>
-}}
+</pre>}}
 
 The previous configuration is just an example, your installation/configuration may be a lot different.
 
-=== Configure phpVirtualBox installation ===
-
-The key file for your phpVirtualBox installation is the {{Path|config.php}} file deriving from {{Path|config.php-example}} file
-
-{{RootCmd
-|cd /usr/share/webapps/phpvirtualbox/4.1.7/htdocs
-|cp config.php-example config.php
-}}
+=== Configure PHPVirtualbox Installation ===
+The key file for your phpvirtualbox installation is the '''config.php''' file deriving from '''config.php-example''' file
+{{RootCmd|cd /usr/share/webapps/phpvirtualbox/4.1.7/htdocs}}
+{{RootCmd|cp config.php-example config.php}}
 
 Edit this file and change the following variables
-
-{{FileBox|filename=/usr/share/webapps/phpvirtualbox/4.1.7/htdocs/config.php|title=PHPVirtualBox configuation|lang=php|1=
+{{File|/usr/share/webapps/phpvirtualbox/4.1.7/htdocs/config.php|PHPVirtualBox configuation|<pre>
 var $username = 'john'; # user who owns the virtual machines on the remote (or local) server
 var $password = 'mysecretpass';  #password for that user
 
 /* SOAP URL of vboxwebsrv (not phpVirtualBox's URL) */
 var $location = 'http://192.168.1.205:18083/'; # Where are the virtual machines? This can either be 'localhost' or the IP or the remote server where your virtual machines are installed
-}}
+</pre>}}
 
 == Verification ==
-
 * Start the vboxwebsrv init service on the host where your virtual machines are located (in our case on 192.168.1.205)
-
 {{RootCmd|/etc/init.d/vboxwebsrv start}}
 
-* Restart Apache on the host where your phpVirtualBox was installed
-
+* Restart Apache on the host where your phpvirtualbox was installed
 {{RootCmd|/etc/init.d/apache2 restart}}
 
-* Connect to phpVirtualBox installation
-
-Open your browser and connect to your phpVirtualBox by typing:
-
-<pre>https://phpvirtualbox.mydomain.example</pre>
-
+* Connect to phpvirtualbox installation
+Open your browser and connect to your phpvirtualbox by typing:
+<pre>https://virtualbox.mydomain.example</pre>
 * You should be able to login using the default credentials
 <pre>
 user: admin
-pass: admin
+pass: pass
 </pre>
 
-== External resources ==
-
-* [https://github.com/phpvirtualbox/phpvirtualbox/wiki phpVirtualBox Wiki]
-
-[[Category:Virtualization]]
+== See Also ==
+[http://code.google.com/p/phpvirtualbox/w/list PHPVirtualbox wiki]
