--- a/SYNC.mw
+++ b/SYNC.mw
@@ -1,11 +1,9 @@
-{{Deprecated}}
+The SYNC variable - in /etc/make.conf - contains the rsync server you want to use when updating your Portage tree (the collection of ebuilds, scripts containing all the information Portage needs to download and install software).
 
-The <var>SYNC</var> variable located in {{Path|[[:/etc/portage/make.conf|/etc/portage/make.conf]]}} was used to set the rsync server URL in order to update the main Gentoo repository. <var>SYNC</var> has been ''deprecated'' in favor of using new the plug-in sync system (defined in [[Project:Portage/Sync#Portage_configuration|{{Path|/etc/portage/repos.conf/gentoo.conf}}]] file).
+A list of [http://www.gentoo.org/main/en/mirrors.xml  community mirrors] is maintained on the Gentoo site.
 
-{{Tip|Although <var>SYNC</var> can still be used in most cases it is recommended all users upgrade repository syncing on their systems to use the new {{Path|[[:/etc/portage/repos.conf]]}} configuration.}}
+== Choosing a mirror ==
+A good mirror can make Portage download source code faster. Usually, you can choose a mirror (with [[mirrorselect|mirrorselect]]) that is near you.
+{{Cmd|mirrorselect -i -r -o >> /etc/make.conf}}
 
-== External resources ==
-
-* https://www.gentoo.org/support/news-items/2015-02-04-portage-sync-changes.html - Main site news item announcing the plug-in sync system.
-
-[[Category:Portage]] [[Category:Deprecated]]
+{{Note|Try choosing a rotation, such as rsync.us.gentoo.org, rather than choosing a single mirror. This helps spread out the load and provides a failsafe in case a specific mirror is offline.}}
