--- a/Mirrorselect.mw
+++ b/Mirrorselect.mw
@@ -1,97 +1,11 @@
-<languages/><translate>
-{{Lowercase title}}
-{{InfoBox stack
-|{{InfoBox project|Portage-Tools|header=true}}
-|{{InfoBox gitweb|mirrorselect.git}}
-}}
-The {{c|mirrorselect}} program provides a nice interface to set the <var>[[GENTOO_MIRRORS]]</var> variable and the [https://www.gentoo.org/support/rsync-mirrors/ Gentoo rsync mirror].
+Mirrorselect provides a nice interface to select the mirrors you want. Just navigate to the mirrors of choice and press spacebar to select one or more mirrors.
+{{emerge|app-portage/mirrorselect}}
 
-== Installation ==
+Find Gentoo mirror (set [[SYNC|SYNC variable]]):
+{{Cmd|mirrorselect -i -o >> /etc/make.conf}}
 
-=== Emerge ===
+Find Gentoo rsync server (set [[GENTOO_MIRRORS|GENTOO_MIRRORS variable]]):
+{{Cmd|mirrorselect -i -r -o >> /etc/make.conf}}
 
-Install {{Package|app-portage/mirrorselect}}:
-
-{{Emerge|app-portage/mirrorselect}}
-
-== Usage ==
-
-=== Select the Gentoo source mirror(s) ===
-
-Interactively find [https://www.gentoo.org/downloads/mirrors/ Gentoo source mirrors] (and set or update the <var>[[GENTOO_MIRRORS]]</var> variable):
-
-{{RootInvocation|mirrorselect -i|output=<pre>
-* Modifying /etc/portage/make.conf with new mirrors...
-        Reading make.conf
-        Moving to /etc/portage/make.conf.backup
-        Writing new /etc/portage/make.conf
-* Done.
-</pre>}}
-
-Notice that a backup copy of {{path|/etc/portage/make.conf}} will be created by {{c|mirrorselect}} before updating it.
-
-Users can also specify a country (United States of America, for example):
-
-{{RootCmd|mirrorselect -i -c USA}}
-
-The following command finds the 3 fastest servers by downloading 100K from each; it will use all available mirrors in the list:
-
-{{RootCmd|mirrorselect -s3 -b10 -D}}
-
-=== Options ===
-
-Please consider using one of these additional options to limit the available mirrors in the list it tests.
-
-Server type selection:
-
-{{GenericCmd|
-     -c COUNTRY, -country COUNTRY
-                        only use mirrors from the specified country NOTE:
-                        Names with a space must be quoted eg.:  -c 'South
-                        Korea'
-    -F, --ftp           ftp only mode. Will not consider hosts of other types.
-    -H, --http          http only mode. Will not consider hosts of other types
-    -r, --rsync         rsync mode. Allows you to interactively select your
-                        rsync mirror. Requires -i or -a to be used.
-     -R REGION, -region REGION
-                        only use mirrors from the specified region NOTE: Names
-                        with a space must be quoted eg.:  -R 'North America'
-    -4, --ipv4          only use IPv4
-    -6, --ipv6          only use IPv6
-}}
-
-=== Select the Gentoo rsync mirror ===
-
-{{Note|[https://www.gentoo.org/support/rsync-mirrors/ Gentoo documentation] states:<br /><br />
-<cite>Gentoo is hosted by many mirrors around the globe. Selecting a mirror that is geographically near may help speed up repository syncs.</cite>}}
-
-{{Note|But [[Handbook:Parts/Installation/Base#Main Gentoo repository|Gentoo handbook]] recommends to keep default settings:<br /><br />
-<cite>The default <var>sync-uri</var> variable value listed above will determine a mirror location based on a rotation. This will aid in easing bandwidth stress on Gentoo's infrastructure and will provide a fail-safe in case a specific mirror is offline. It is recommended the default URI is retained unless a local, private Portage mirror will be used.</cite>}}
-
-The default configuration of the [https://gitweb.gentoo.org/repo/gentoo.git/tree/ Gentoo repository] comes from {{package|sys-apps/portage}} and is located at {{Path|/usr/share/portage/config/repos.conf}}. However settings in {{Path|[[:/etc/portage/repos.conf]]}} override it.
-
-{{c|mirrorselect}} will not create the {{Path|[[:/etc/portage/repos.conf/gentoo.conf]]}} file automatically. If that file does not exist, {{c|mirrorselect}} will default to using the old {{Path|make.conf}} <var>[[SYNC]]</var> variable which has been deprecated. In order to avoid this make sure Portage is up to date and copy the {{Path|repos.conf}} file from Portage's {{Path|/usr}} (library) location to the {{Path|/etc}} (configuration) location:
-
-{{Emerge|params+=--update|sys-apps/portage}}
-
-{{RootCmd
-|mkdir /etc/portage/repos.conf
-|cp /usr/share/portage/config/repos.conf /etc/portage/repos.conf/gentoo.conf
-}}
-
-{{Note|For additional {{Path|repos.conf}} documentation and configuration please refer to  [[Project:Portage/Sync#Portage_configuration|Portage/Sync#Portage_configuration]]}}
-
-Then find a [https://www.gentoo.org/support/rsync-mirrors/ Gentoo rsync mirror] with {{c|mirrorselect}} (make sure to use <code>sync-type = rsync</code>):
-
-{{RootCmd|mirrorselect -i -r -o >> [[:/etc/portage/repos.conf#Main_Gentoo_repository|/etc/portage/repos.conf/gentoo.conf]]}}
-
-Just navigate to the mirrors of choice and press {{Key|Space}} to select one (or more) mirrors.
-
-== See also ==
-
-* [[Handbook:Parts/Installation/Base#Optional:_Selecting_mirrors|Handbook:Parts/Installation/Base#Optional:_Selecting_mirrors]]
-* [[Project:Infrastructure/Mirrors/Source]]
-* [[Project:Infrastructure/Mirrors/Rsync]]
-
-</translate>
-[[Category:Portage]]
+Find 3 fastest servers by downloading 100K from each:
+{{Cmd|mirrorselect -s3 -b10 -o -D >> /etc/make.conf}}
